# ProjectKratos

./: .gitignore  README.md
Automation/Inductions/ros2_ws/: .gitignore
Automation/Inductions/turtle_controller/: package.xml
Automation/Inductions/turtle_controller/my_robot_controller/: pose_subscriber.py
Documentation/Automation_Inductions/: ArkaDasgupta_Week4_Automation_OpenCV_ArUCO_Search_ProjectKratos  README.md
Documentation/EnC_Inductions/: ArkaDasgupta_Week4_EnC_4WheelIndependentDrive_DoubleAckermann_ProjectKratos.webm  VideoLinks
Hardware/ESP32S3_Breakout_Board/: Project Kratos- W2 Q2 -ESP32-S3 Devkit Breakout Board.dsn  Project Kratos- W2 Q2 -ESP32-S3 Devkit Breakout Board.kicad_pcb  Project Kratos- W2 Q2 -ESP32-S3 Devkit Breakout Board.kicad_prl  Project Kratos- W2 Q2 -ESP32-S3 Devkit Breakout Board.kicad_pro  Project Kratos- W2 Q2 -ESP32-S3 Devkit Breakout Board.kicad_sch
Hardware/ESP32S3_Breakout_Board/Gerbers/: Project Kratos- W2 Q2 -ESP32-S3 Devkit Breakout Board-B_Cu.gbr  Project Kratos- W2 Q2 -ESP32-S3 Devkit Breakout Board-B_Mask.gbr  Project Kratos- W2 Q2 -ESP32-S3 Devkit Breakout Board-B_Paste.gbr  Project Kratos- W2 Q2 -ESP32-S3 Devkit Breakout Board-B_Silkscreen.gbr  Project Kratos- W2 Q2 -ESP32-S3 Devkit Breakout Board-Edge_Cuts.gbr  (+9 more)
Hardware/I2C_Multiplexer/: My_Custom_Parts.kicad_sym  Project Kratos - W2 Q1 - Making a Custom Part.kicad_pcb  Project Kratos - W2 Q1 - Making a Custom Part.kicad_prl  Project Kratos - W2 Q1 - Making a Custom Part.kicad_pro  Project Kratos - W2 Q1 - Making a Custom Part.kicad_sch  sym-lib-table
Hardware/Power_Distribution_Board/: Project Kratos - W2 Q3 - Power Distribution Board.kicad_pcb  Project Kratos - W2 Q3 - Power Distribution Board.kicad_prl  Project Kratos - W2 Q3 - Power Distribution Board.kicad_pro  Project Kratos - W2 Q3 - Power Distribution Board.kicad_sch
src/Automation_Track/kratos_arka/: CMakeLists.txt
src/Automation_Track/kratos_arka/launch/: bringup.launch.py
src/Automation_Track/kratos_arka/src/: rover_status_msg_subscriber.py
(+110 files in other folders)
